--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,10 @@
       }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "Src/bootstrap.js"  
-      }
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+          }
     ]
   }
   
