--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+        "src": "Src/bootstrap.js",
+        "use": "@vercel/node"
+      }
   ],
   "routes": [
     {
-        "src": "/api/(.*)",
-        "dest": "/Src/bootstrap.js"
-      }
+      "src": "/api/(.*)",
+      "dest": "index.js"
+    }
   ]
 }
