--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
-  "version": 2,
-  "builds": [
-    {
-        "src": "Src/bootstrap.js",
-        "use": "@vercel/node"
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["**/*.js", "**/*.json"]
+        }
       }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "index.js"
-    }
-  ]
-}
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
+    ]
+  }
