--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.10"
   }
 }
