--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,13 @@
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "/index.js"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/index.js"
         }
     ]
-  }
+}
   
